welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: value grey is not a member of object java.awt.Color
case Color.grey => baisseBrosse; leveBrosse;
           ^