welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
if(!estFaceMur){avance();}
getCouleurSol()
match {
case Color.green => baisseBrosse; leveBrosse;
case Color.grey => baisseBrosse; leveBrosse;
case _ => recule();
}
return estSurBiscuit();
}        
